default name, fixed visibility issue in timetable, finished saved of my trips after login and synchronization

--- a/viaggia-mobile/www/css/style.css
+++ b/viaggia-mobile/www/css/style.css
@@ -1341,6 +1341,10 @@ ion-header-bar .title {
     font-size: 20px;
 }
 
+.not_accessible {
+    opacity: 0.6;
+}
+
 
 /*
 
@@ -1559,6 +1563,24 @@ ion-header-bar .title {
     right: auto;
     margin-top: auto;
     padding-bottom: 0;
+}
+
+.recurrent_icon {
+    position: absolute;
+    right: 30px;
+    color: #2975a7;
+}
+
+.recurrent_icon_detail {
+    color: #2975a7;
+}
+
+.recurrence_days {
+    height: 50px;
+}
+
+.recurrnce_day_string {
+    margin: 2px;
 }
 
 
